# cincy-transit-predictor

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-ingest.txt  requirements-transform.txt  requirements.txt  warehouse.py
.github/workflows/: ci.yml  ingest.yml  static_gtfs.yml  transform_train.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/raw/trip_updates/date=2026-07-19/: trip_updates_20260719T212826Z.parquet  trip_updates_20260719T222648Z.parquet  trip_updates_20260719T232850Z.parquet
data/raw/trip_updates/date=2026-07-20/: trip_updates_20260720T010529Z.parquet  trip_updates_20260720T020304Z.parquet  trip_updates_20260720T020541Z.parquet  trip_updates_20260720T022013Z.parquet  trip_updates_20260720T023444Z.parquet  trip_updates_20260720T024916Z.parquet  trip_updates_20260720T045148Z.parquet  (+41 more)
data/reference/: calendar.parquet  calendar_dates.parquet  routes.parquet  stop_times.parquet  stops.parquet  trips.parquet
ingestion/: feeds.py  fetch_realtime.py  fetch_static_gtfs.py
ml/: build_features.py  evaluate.py  train.py
ml/artifacts/: metrics.json  model.pkl
tests/: test_features.py  test_fetch.py
transform/: dbt_project.yml  ensure_md_db.py  profiles.yml
transform/models/marts/: _marts.yml  dim_route.sql  dim_route_stops.sql  dim_stop.sql  fct_arrivals.sql  mart_route_reliability.sql  mart_stop_delays.sql
transform/models/staging/: _sources.yml  stg_routes.sql  stg_stop_times.sql  stg_stops.sql  stg_trip_updates.sql  stg_trips.sql  stg_vehicle_positions.sql  stg_weather.sql
(+660 files in other folders)
