[project]
name = "cincy-transit-predictor"
version = "0.1.0"
description = "End-to-end pipeline predicting Cincinnati Metro (SORTA) bus arrival delays."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
